syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./store;store";
package store;

service Store{
  //商城模块
  //1.查询商品（分页）
  rpc SelectGoods(SelectGoodsReq)returns(SelectGoodsRsp);
  //2.购买商品
  rpc BuyGoods(BuyGoodReq)returns(google.protobuf.Empty);
  //3.增加商品和删除商品不做（直接数据库添加）

  //交易模块
  //1.查询交易商品（分页）
  rpc SelectTradeItems(SelectTradeItemsReq)returns(SelectTradeItemsRsp);
  //2.上架交易商品
  rpc PushTradeItem(PushTradeItemReq)returns(google.protobuf.Empty);
  //3.下架交易商品
  rpc DownTradeItem(DownTradeItemReq)returns(google.protobuf.Empty);
  //4.购买交易商品
  rpc BuyTradeItem(BuyTradeItemReq)returns(google.protobuf.Empty);
}

message SelectGoodsReq{
  uint32 page=1;
  uint32 pageSize=2;
}

message SelectGoodsRsp{
  repeated uint32 unKnow=1;
}

message BuyGoodReq{
  uint32 user_id=1; //购买者
  uint32 good_id=2; //购买商品id
  uint32 count=3; //购买数量
}

message SelectTradeItemsReq{
  uint32 page=1;
  uint32 pageSize=2;
}

message SelectTradeItemsRsp{
  repeated uint32 unKnow=1;
}

message PushTradeItemReq{
  uint32 user_id=1; //售卖者
  uint32 item_id=2; //物品
  uint32 price=3; //售卖价格
  uint32 count=4; //售卖数量
}

message DownTradeItemReq{
  uint32 trade_id=1; //售卖唯一ID
}

message BuyTradeItemReq{
  uint32 trade_id=1; //售卖ID
}